tdf#162180: GetTableBox might return nullptr

Change-Id: I31091b5bd06ba30a2e9bbddad66c5c597b22a6fc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171007
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>